--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,24 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  padding: 60px;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+* {
+  font-family: Helvetica, Arial, sans-serif;
+}
+
+.card{
+  align-content: center;
+  border: 1px solid grey;
+  border-radius: 3px;
+  overflow: hidden;
+  margin: 10px 10px 0 0;
+  width: 50%;
+
 }
